include/El/blas_like/level1.h

/* MakeHermitian 
   ============= */
EL_EXPORT ElError ElMakeHermitian_c
( ElUpperOrLower uplo, ElMatrix_c A );
EL_EXPORT ElError ElMakeHermitian_z
( ElUpperOrLower uplo, ElMatrix_z A );
EL_EXPORT ElError ElMakeHermitianDist_c
( ElUpperOrLower uplo, ElDistMatrix_c A );
EL_EXPORT ElError ElMakeHermitianDist_z
( ElUpperOrLower uplo, ElDistMatrix_z A );
EL_EXPORT ElError ElMakeHermitianSparse_c
( ElUpperOrLower uplo, ElSparseMatrix_c A );
EL_EXPORT ElError ElMakeHermitianSparse_z
( ElUpperOrLower uplo, ElSparseMatrix_z A );
EL_EXPORT ElError ElMakeHermitianDistSparse_c
( ElUpperOrLower uplo, ElDistSparseMatrix_c A );
EL_EXPORT ElError ElMakeHermitianDistSparse_z
( ElUpperOrLower uplo, ElDistSparseMatrix_z A );
/* MakeReal
   ======== */
EL_EXPORT ElError ElMakeReal_c( ElMatrix_c A );
EL_EXPORT ElError ElMakeReal_z( ElMatrix_z A );
EL_EXPORT ElError ElMakeRealDist_c( ElDistMatrix_c A );
EL_EXPORT ElError ElMakeRealDist_z( ElDistMatrix_z A );
/* MakeSymmetric 
   ============= */
EL_EXPORT ElError ElMakeSymmetric_i( ElUpperOrLower uplo, ElMatrix_i A );
EL_EXPORT ElError ElMakeSymmetric_s( ElUpperOrLower uplo, ElMatrix_s A );
EL_EXPORT ElError ElMakeSymmetric_d( ElUpperOrLower uplo, ElMatrix_d A );
EL_EXPORT ElError ElMakeSymmetric_c( ElUpperOrLower uplo, ElMatrix_c A );
EL_EXPORT ElError ElMakeSymmetric_z( ElUpperOrLower uplo, ElMatrix_z A );
EL_EXPORT ElError ElMakeSymmetricDist_i
( ElUpperOrLower uplo, ElDistMatrix_i A );
EL_EXPORT ElError ElMakeSymmetricDist_s
( ElUpperOrLower uplo, ElDistMatrix_s A );
EL_EXPORT ElError ElMakeSymmetricDist_d
( ElUpperOrLower uplo, ElDistMatrix_d A );
EL_EXPORT ElError ElMakeSymmetricDist_c
( ElUpperOrLower uplo, ElDistMatrix_c A );
EL_EXPORT ElError ElMakeSymmetricDist_z
( ElUpperOrLower uplo, ElDistMatrix_z A );
EL_EXPORT ElError ElMakeSymmetricSparse_i
( ElUpperOrLower uplo, ElSparseMatrix_i A );
EL_EXPORT ElError ElMakeSymmetricSparse_s
( ElUpperOrLower uplo, ElSparseMatrix_s A );
EL_EXPORT ElError ElMakeSymmetricSparse_d
( ElUpperOrLower uplo, ElSparseMatrix_d A );
EL_EXPORT ElError ElMakeSymmetricSparse_c
( ElUpperOrLower uplo, ElSparseMatrix_c A );
EL_EXPORT ElError ElMakeSymmetricSparse_z
( ElUpperOrLower uplo, ElSparseMatrix_z A );
EL_EXPORT ElError ElMakeSymmetricDistSparse_i
( ElUpperOrLower uplo, ElDistSparseMatrix_i A );
EL_EXPORT ElError ElMakeSymmetricDistSparse_s
( ElUpperOrLower uplo, ElDistSparseMatrix_s A );
EL_EXPORT ElError ElMakeSymmetricDistSparse_d
( ElUpperOrLower uplo, ElDistSparseMatrix_d A );
EL_EXPORT ElError ElMakeSymmetricDistSparse_c
( ElUpperOrLower uplo, ElDistSparseMatrix_c A );
EL_EXPORT ElError ElMakeSymmetricDistSparse_z
( ElUpperOrLower uplo, ElDistSparseMatrix_z A );
/* MakeTrapezoidal
   =============== */
EL_EXPORT ElError ElMakeTrapezoidal_i
( ElUpperOrLower uplo, ElMatrix_i A, ElInt offset );
EL_EXPORT ElError ElMakeTrapezoidal_s
( ElUpperOrLower uplo, ElMatrix_s A, ElInt offset );
EL_EXPORT ElError ElMakeTrapezoidal_d
( ElUpperOrLower uplo, ElMatrix_d A, ElInt offset );
EL_EXPORT ElError ElMakeTrapezoidal_c
( ElUpperOrLower uplo, ElMatrix_c A, ElInt offset );
EL_EXPORT ElError ElMakeTrapezoidal_z
( ElUpperOrLower uplo, ElMatrix_z A, ElInt offset );
EL_EXPORT ElError ElMakeTrapezoidalDist_i
( ElUpperOrLower uplo, ElDistMatrix_i A, ElInt offset );
EL_EXPORT ElError ElMakeTrapezoidalDist_s
( ElUpperOrLower uplo, ElDistMatrix_s A, ElInt offset );
EL_EXPORT ElError ElMakeTrapezoidalDist_d
( ElUpperOrLower uplo, ElDistMatrix_d A, ElInt offset );
EL_EXPORT ElError ElMakeTrapezoidalDist_c
( ElUpperOrLower uplo, ElDistMatrix_c A, ElInt offset );
EL_EXPORT ElError ElMakeTrapezoidalDist_z
( ElUpperOrLower uplo, ElDistMatrix_z A, ElInt offset );
EL_EXPORT ElError ElMakeTrapezoidalSparse_i
( ElUpperOrLower uplo, ElSparseMatrix_i A, ElInt offset );
EL_EXPORT ElError ElMakeTrapezoidalSparse_s
( ElUpperOrLower uplo, ElSparseMatrix_s A, ElInt offset );
EL_EXPORT ElError ElMakeTrapezoidalSparse_d
( ElUpperOrLower uplo, ElSparseMatrix_d A, ElInt offset );
EL_EXPORT ElError ElMakeTrapezoidalSparse_c
( ElUpperOrLower uplo, ElSparseMatrix_c A, ElInt offset );
EL_EXPORT ElError ElMakeTrapezoidalSparse_z
( ElUpperOrLower uplo, ElSparseMatrix_z A, ElInt offset );
EL_EXPORT ElError ElMakeTrapezoidalDistSparse_i
( ElUpperOrLower uplo, ElDistSparseMatrix_i A, ElInt offset );
EL_EXPORT ElError ElMakeTrapezoidalDistSparse_s
( ElUpperOrLower uplo, ElDistSparseMatrix_s A, ElInt offset );
EL_EXPORT ElError ElMakeTrapezoidalDistSparse_d
( ElUpperOrLower uplo, ElDistSparseMatrix_d A, ElInt offset );
EL_EXPORT ElError ElMakeTrapezoidalDistSparse_c
( ElUpperOrLower uplo, ElDistSparseMatrix_c A, ElInt offset );
EL_EXPORT ElError ElMakeTrapezoidalDistSparse_z
( ElUpperOrLower uplo, ElDistSparseMatrix_z A, ElInt offset );
/* Max
   === */
EL_EXPORT ElError ElMax_i( ElConstMatrix_i A, ElEntry_i* entry );
EL_EXPORT ElError ElMax_s( ElConstMatrix_s A, ElEntry_s* entry );
EL_EXPORT ElError ElMax_d( ElConstMatrix_d A, ElEntry_d* entry );
EL_EXPORT ElError ElMaxDist_i( ElConstDistMatrix_i A, ElEntry_i* entry );
EL_EXPORT ElError ElMaxDist_s( ElConstDistMatrix_s A, ElEntry_s* entry );
EL_EXPORT ElError ElMaxDist_d( ElConstDistMatrix_d A, ElEntry_d* entry );
EL_EXPORT ElError ElSymmetricMax_i
( ElUpperOrLower uplo, ElConstMatrix_i A, ElEntry_i* entry );
EL_EXPORT ElError ElSymmetricMax_s
( ElUpperOrLower uplo, ElConstMatrix_s A, ElEntry_s* entry );
EL_EXPORT ElError ElSymmetricMax_d
( ElUpperOrLower uplo, ElConstMatrix_d A, ElEntry_d* entry );
EL_EXPORT ElError ElSymmetricMaxDist_i
( ElUpperOrLower uplo, ElConstDistMatrix_i A, ElEntry_i* entry );
EL_EXPORT ElError ElSymmetricMaxDist_s
( ElUpperOrLower uplo, ElConstDistMatrix_s A, ElEntry_s* entry );
EL_EXPORT ElError ElSymmetricMaxDist_d
( ElUpperOrLower uplo, ElConstDistMatrix_d A, ElEntry_d* entry );