python/blas_like/level1.py


# Make symmetric/Hermitian
# ------------------------
lib.ElMakeSymmetric_i.argtypes = \
lib.ElMakeSymmetric_s.argtypes = \
lib.ElMakeSymmetric_d.argtypes = \
lib.ElMakeSymmetric_c.argtypes = \
lib.ElMakeSymmetric_z.argtypes = \
lib.ElMakeSymmetricDist_i.argtypes = \
lib.ElMakeSymmetricDist_s.argtypes = \
lib.ElMakeSymmetricDist_d.argtypes = \
lib.ElMakeSymmetricDist_c.argtypes = \
lib.ElMakeSymmetricDist_z.argtypes = \
lib.ElMakeSymmetricSparse_i.argtypes = \
lib.ElMakeSymmetricSparse_s.argtypes = \
lib.ElMakeSymmetricSparse_d.argtypes = \
lib.ElMakeSymmetricSparse_c.argtypes = \
lib.ElMakeSymmetricSparse_z.argtypes = \
lib.ElMakeSymmetricDistSparse_i.argtypes = \
lib.ElMakeSymmetricDistSparse_s.argtypes = \
lib.ElMakeSymmetricDistSparse_d.argtypes = \
lib.ElMakeSymmetricDistSparse_c.argtypes = \
lib.ElMakeSymmetricDistSparse_z.argtypes = \
  [c_uint,c_void_p]

lib.ElMakeHermitian_c.argtypes = \
lib.ElMakeHermitian_z.argtypes = \
lib.ElMakeHermitianDist_c.argtypes = \
lib.ElMakeHermitianDist_z.argtypes = \
lib.ElMakeHermitianSparse_c.argtypes = \
lib.ElMakeHermitianSparse_z.argtypes = \
lib.ElMakeHermitianDistSparse_c.argtypes = \
lib.ElMakeHermitianDistSparse_z.argtypes = \
  [c_uint,c_void_p]

def MakeSymmetric(uplo,A,conj=False):
  args = [uplo,A.obj]
  if type(A) is Matrix: 
    if   A.tag == iTag: lib.ElMakeSymmetric_i(*args)
    elif A.tag == sTag: lib.ElMakeSymmetric_s(*args)
    elif A.tag == dTag: lib.ElMakeSymmetric_d(*args)
    elif A.tag == cTag: 
      if conj: lib.ElMakeHermitian_c(*args)
      else:    lib.ElMakeSymmetric_c(*args)
    elif A.tag == zTag: 
      if conj: lib.ElMakeHermitian_z(*args)
      else:    lib.ElMakeSymmetric_z(*args)
    else: DataExcept()
  elif type(A) is DistMatrix:
    if   A.tag == iTag: lib.ElMakeSymmetricDist_i(*args)
    elif A.tag == sTag: lib.ElMakeSymmetricDist_s(*args)
    elif A.tag == dTag: lib.ElMakeSymmetricDist_d(*args)
    elif A.tag == cTag: 
      if conj: lib.ElMakeHermitianDist_c(*args)
      else:    lib.ElMakeSymmetricDist_c(*args)
    elif A.tag == zTag: 
      if conj: lib.ElMakeHermitianDist_z(*args)
      else:    lib.ElMakeSymmetricDist_z(*args)
    else: DataExcept()
  elif type(A) is SparseMatrix:
    if   A.tag == iTag: lib.ElMakeSymmetricSparse_i(*args)
    elif A.tag == sTag: lib.ElMakeSymmetricSparse_s(*args)
    elif A.tag == dTag: lib.ElMakeSymmetricSparse_d(*args)
    elif A.tag == cTag:
      if conjugate: lib.ElMakeHermitianSparse_c(*args)
      else:         lib.ElMakeHermitianSparse_c(*args)
    elif A.tag == zTag:
      if conjugate: lib.ElMakeHermitianSparse_z(*args)
      else:         lib.ElMakeHermitianSparse_z(*args)
    else: DataExcept()
  elif type(A) is DistSparseMatrix:
    if   A.tag == iTag: lib.ElMakeSymmetricDistSparse_i(*args)
    elif A.tag == sTag: lib.ElMakeSymmetricDistSparse_s(*args)
    elif A.tag == dTag: lib.ElMakeSymmetricDistSparse_d(*args)
    elif A.tag == cTag:
      if conjugate: lib.ElMakeHermitianDistSparse_c(*args)
      else:         lib.ElMakeHermitianDistSparse_c(*args)
    elif A.tag == zTag:
      if conjugate: lib.ElMakeHermitianDistSparse_z(*args)
      else:         lib.ElMakeHermitianDistSparse_z(*args)
    else: DataExcept()
  else: TypeExcept()

def MakeHermitian(uplo,A):
  MakeSymmetric(uplo,A,True)

# Make real
# ---------
lib.ElMakeReal_c.argtypes = \
lib.ElMakeReal_z.argtypes = \
lib.ElMakeRealDist_c.argtypes = \
lib.ElMakeRealDist_z.argtypes = \
  [c_uint,c_void_p]

def MakeReal(uplo,A):
  args = [uplo,A.obj]
  if type(A) is Matrix:
    if   A.tag == cTag: lib.ElMakeReal_c(*args)
    elif A.tag == zTag: lib.ElMakeReal_z(*args)
  elif type(A) is DistMatrix:
    if   A.tag == cTag: lib.ElMakeRealDist_c(*args)
    elif A.tag == zTag: lib.ElMakeRealDist_z(*args)
  else: TypeExcept()

# Make trapezoidal
# ----------------
lib.ElMakeTrapezoidal_i.argtypes = \
lib.ElMakeTrapezoidal_s.argtypes = \
lib.ElMakeTrapezoidal_d.argtypes = \
lib.ElMakeTrapezoidal_c.argtypes = \
lib.ElMakeTrapezoidal_z.argtypes = \
lib.ElMakeTrapezoidalDist_i.argtypes = \
lib.ElMakeTrapezoidalDist_s.argtypes = \
lib.ElMakeTrapezoidalDist_d.argtypes = \
lib.ElMakeTrapezoidalDist_c.argtypes = \
lib.ElMakeTrapezoidalDist_z.argtypes = \
lib.ElMakeTrapezoidalSparse_i.argtypes = \
lib.ElMakeTrapezoidalSparse_s.argtypes = \
lib.ElMakeTrapezoidalSparse_d.argtypes = \
lib.ElMakeTrapezoidalSparse_c.argtypes = \
lib.ElMakeTrapezoidalSparse_z.argtypes = \
  [c_uint,c_void_p,iType]

def MakeTrapezoidal(uplo,A,offset=0):
  args = [uplo,A.obj,offset]
  if type(A) is Matrix:
    if   A.tag == iTag: lib.ElMakeTrapezoidal_i(*args)
    elif A.tag == sTag: lib.ElMakeTrapezoidal_s(*args)
    elif A.tag == dTag: lib.ElMakeTrapezoidal_d(*args)
    elif A.tag == cTag: lib.ElMakeTrapezoidal_c(*args)
    elif A.tag == zTag: lib.ElMakeTrapezoidal_z(*args)
    else: DataExcept()
  elif type(A) is DistMatrix:
    if   A.tag == iTag: lib.ElMakeTrapezoidalDist_i(*args)
    elif A.tag == sTag: lib.ElMakeTrapezoidalDist_s(*args)
    elif A.tag == dTag: lib.ElMakeTrapezoidalDist_d(*args)
    elif A.tag == cTag: lib.ElMakeTrapezoidalDist_c(*args)
    elif A.tag == zTag: lib.ElMakeTrapezoidalDist_z(*args)
    else: DataExcept()
  elif type(A) is SparseMatrix:
    if   A.tag == iTag: lib.ElMakeTrapezoidalSparse_i(*args)
    elif A.tag == sTag: lib.ElMakeTrapezoidalSparse_s(*args)
    elif A.tag == dTag: lib.ElMakeTrapezoidalSparse_d(*args)
    elif A.tag == cTag: lib.ElMakeTrapezoidalSparse_c(*args)
    elif A.tag == zTag: lib.ElMakeTrapezoidalSparse_z(*args)
    else: DataExcept()
  elif type(A) is DistSparseMatrix:
    if   A.tag == iTag: lib.ElMakeTrapezoidalDistSparse_i(*args)
    elif A.tag == sTag: lib.ElMakeTrapezoidalDistSparse_s(*args)
    elif A.tag == dTag: lib.ElMakeTrapezoidalDistSparse_d(*args)
    elif A.tag == cTag: lib.ElMakeTrapezoidalDistSparse_c(*args)
    elif A.tag == zTag: lib.ElMakeTrapezoidalDistSparse_z(*args)
    else: DataExcept()
  else: TypeExcept()

# Max
# ---
lib.ElMax_i.argtypes = \
lib.ElMaxDist_i.argtypes = \
  [c_void_p,POINTER(iType)]

lib.ElMax_s.argtypes = \
lib.ElMaxDist_s.argtypes = \
  [c_void_p,POINTER(sType)]

lib.ElMax_d.argtypes = \
lib.ElMaxDist_d.argtypes = \
  [c_void_p,POINTER(dType)]

def Max(A):
  alpha = TagToType(A.tag)()
  args = [A.obj,pointer(alpha)]
  if type(A) is Matrix:
    if   A.tag == iTag: lib.ElMax_i(*args) 
    elif A.tag == sTag: lib.ElMax_s(*args) 
    elif A.tag == dTag: lib.ElMax_d(*args) 
    else: DataExcept()
  elif type(A) is DistMatrix:
    if   A.tag == iTag: lib.ElMaxDist_i(*args) 
    elif A.tag == sTag: lib.ElMaxDist_s(*args) 
    elif A.tag == dTag: lib.ElMaxDist_d(*args) 
    else: DataExcept()
  else: TypeExcept()
  return alpha.value

lib.ElSymmetricMax_i.argtypes = \
lib.ElSymmetricMaxDist_i.argtypes = \
  [c_uint,c_void_p,POINTER(iType)]

lib.ElSymmetricMax_s.argtypes = \
lib.ElSymmetricMaxDist_s.argtypes = \
  [c_uint,c_void_p,POINTER(sType)]

lib.ElSymmetricMax_d.argtypes = \
lib.ElSymmetricMaxDist_d.argtypes = \
  [c_uint,c_void_p,POINTER(dType)]

def SymmetricMax(uplo,A):
  alpha = TagToType(A.tag)()
  args = [uplo,A.obj,pointer(alpha)]
  if type(A) is Matrix:
    if   A.tag == iTag: lib.ElSymmetricMax_i(*args) 
    elif A.tag == sTag: lib.ElSymmetricMax_s(*args) 
    elif A.tag == dTag: lib.ElSymmetricMax_d(*args) 
    else: DataExcept()
  elif type(A) is DistMatrix:
    if   A.tag == iTag: lib.ElSymmetricMaxDist_i(*args) 
    elif A.tag == sTag: lib.ElSymmetricMaxDist_s(*args) 
    elif A.tag == dTag: lib.ElSymmetricMaxDist_d(*args) 
    else: DataExcept()
  else: TypeExcept()
  return alpha.value

# MaxLoc
# ------
class ValueInt_i(ctypes.Structure):
  _fields_ = [("value",iType),("index",iType)]
class ValueInt_s(ctypes.Structure):
  _fields_ = [("value",sType),("index",iType)]
class ValueInt_d(ctypes.Structure):
  _fields_ = [("value",dType),("index",iType)]
class ValueInt_c(ctypes.Structure):
  _fields_ = [("value",cType),("index",iType)]
class ValueInt_z(ctypes.Structure):
  _fields_ = [("value",zType),("index",iType)]
def TagToValueInt(tag):
  if   tag == iTag: return ValueInt_i()
  elif tag == sTag: return ValueInt_s()
  elif tag == dTag: return ValueInt_d()
  elif tag == cTag: return ValueInt_c()
  elif tag == zTag: return ValueInt_z()
  else: DataExcept()

class Entry_i(ctypes.Structure):
  _fields_ = [("i",iType),("j",iType),("value",iType)]
class Entry_s(ctypes.Structure):
  _fields_ = [("i",iType),("j",iType),("value",sType)]
class Entry_d(ctypes.Structure):
  _fields_ = [("i",iType),("j",iType),("value",dType)]
class Entry_c(ctypes.Structure):
  _fields_ = [("i",iType),("j",iType),("value",cType)]
class Entry_z(ctypes.Structure):
  _fields_ = [("i",iType),("j",iType),("value",zType)]
def TagToEntry(tag):
  if   tag == iTag: return Entry_i()
  elif tag == sTag: return Entry_s()
  elif tag == dTag: return Entry_d()
  elif tag == cTag: return Entry_c()
  elif tag == zTag: return Entry_z()
  else: DataExcept()

lib.ElMaxLoc_i.argtypes = \
lib.ElMaxLocDist_i.argtypes = \
  [c_void_p,POINTER(Entry_i)]

lib.ElMaxLoc_s.argtypes = \
lib.ElMaxLocDist_s.argtypes = \
  [c_void_p,POINTER(Entry_s)]

lib.ElMaxLoc_d.argtypes = \
lib.ElMaxLocDist_d.argtypes = \
  [c_void_p,POINTER(Entry_d)]

def MaxLoc(A):
  entry = TagToEntry(A.tag)
  args = [A.obj,pointer(entry)]
  if type(A) is Matrix:
    if   A.tag == iTag: lib.ElMaxLoc_i(*args) 
    elif A.tag == sTag: lib.ElMaxLoc_s(*args) 
    elif A.tag == dTag: lib.ElMaxLoc_d(*args) 
    else: DataExcept()
  elif type(A) is DistMatrix:
    if   A.tag == iTag: lib.ElMaxLocDist_i(*args) 
    elif A.tag == sTag: lib.ElMaxLocDist_s(*args) 
    elif A.tag == dTag: lib.ElMaxLocDist_d(*args) 
    else: DataExcept()
  else: TypeExcept()
  return entry

lib.ElSymmetricMaxLoc_i.argtypes = \
lib.ElSymmetricMaxLocDist_i.argtypes = \
  [c_uint,c_void_p,POINTER(Entry_i)]

lib.ElSymmetricMaxLoc_s.argtypes = \
lib.ElSymmetricMaxLocDist_s.argtypes = \
  [c_uint,c_void_p,POINTER(Entry_s)]

lib.ElSymmetricMaxLoc_d.argtypes = \
lib.ElSymmetricMaxLocDist_d.argtypes = \
  [c_uint,c_void_p,POINTER(Entry_d)]

def SymmetricMaxLoc(uplo,A):
  entry = TagToEntry(A.tag)
  args = [uplo,A.obj,pointer(entry)]
  if type(A) is Matrix:
    if   A.tag == iTag: lib.ElSymmetricMaxLoc_i(*args) 
    elif A.tag == sTag: lib.ElSymmetricMaxLoc_s(*args) 
    elif A.tag == dTag: lib.ElSymmetricMaxLoc_d(*args) 
    else: DataExcept()
  elif type(A) is DistMatrix:
    if   A.tag == iTag: lib.ElSymmetricMaxLocDist_i(*args) 
    elif A.tag == sTag: lib.ElSymmetricMaxLocDist_s(*args) 
    elif A.tag == dTag: lib.ElSymmetricMaxLocDist_d(*args) 
    else: DataExcept()
  else: TypeExcept()
  return entry

lib.ElVectorMaxLoc_i.argtypes = \
lib.ElVectorMaxLocDist_i.argtypes = \
  [c_void_p,POINTER(ValueInt_i)]

lib.ElVectorMaxLoc_s.argtypes = \
lib.ElVectorMaxLocDist_s.argtypes = \
  [c_void_p,POINTER(ValueInt_s)]

lib.ElVectorMaxLoc_d.argtypes = \
lib.ElVectorMaxLocDist_d.argtypes = \
  [c_void_p,POINTER(ValueInt_d)]

def VectorMaxLoc(A):
  pair = TagToValueInt(A.tag)
  args = [A.obj,pointer(pair)]
  if type(A) is Matrix:
    if   A.tag == iTag: lib.ElVectorMaxLoc_i(*args) 
    elif A.tag == sTag: lib.ElVectorMaxLoc_s(*args) 
    elif A.tag == dTag: lib.ElVectorMaxLoc_d(*args) 
    else: DataExcept()
  elif type(A) is DistMatrix:
    if   A.tag == iTag: lib.ElVectorMaxLocDist_i(*args) 
    elif A.tag == sTag: lib.ElVectorMaxLocDist_s(*args) 
    elif A.tag == dTag: lib.ElVectorMaxLocDist_d(*args) 
    else: DataExcept()
  else: TypeExcept()
  return pair

# MaxAbs
# ------
# TODO

# MaxAbsLoc
# ---------
lib.ElMaxAbsLoc_i.argtypes = \
lib.ElMaxAbsLocDist_i.argtypes = \
  [c_void_p,POINTER(Entry_i)]

lib.ElMaxAbsLoc_s.argtypes = \
lib.ElMaxAbsLoc_c.argtypes = \
lib.ElMaxAbsLocDist_s.argtypes = \
lib.ElMaxAbsLocDist_c.argtypes = \
  [c_void_p,POINTER(Entry_s)]

lib.ElMaxAbsLoc_d.argtypes = \
lib.ElMaxAbsLoc_z.argtypes = \
lib.ElMaxAbsLocDist_d.argtypes = \
lib.ElMaxAbsLocDist_z.argtypes = \
  [c_void_p,POINTER(Entry_d)]
